--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.3
+  cupertino_icons: ^1.0.2
+  geolocator: ^10.1.0 # for getting GPS location
+  http: ^0.13.5 # for sending HTTP requests
+  supabase_flutter: ^1.10.10 # for connecting to Supabase
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
