--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   geolocator: ^10.1.0 # for getting GPS location
   http: ^0.13.5 # for sending HTTP requests
   supabase_flutter: ^1.10.10 # for connecting to Supabase
-
+  flutter_dotenv: ^5.0.2 # <-- Add this line
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
