--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,12 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   geolocator: ^10.1.0 # for getting GPS location
-  http: ^0.13.5 # for sending HTTP requests
+  http: 1.3.0 # for sending HTTP requests
   supabase_flutter: ^1.10.10 # for connecting to Supabase
-  flutter_dotenv: ^5.0.2 # <-- Add this line to load .env file
+  flutter_dotenv: ^5.0.2
   intl: ^0.18.0 # or the latest version
+  flutter_map: ^6.1.0
+  latlong2: ^0.9.0
 
 dev_dependencies:
   flutter_test:
