--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   geolocator: ^10.1.0 # for getting GPS location
   http: 1.3.0 # for sending HTTP requests
-  supabase_flutter: ^1.10.10 # for connecting to Supabase
   flutter_dotenv: ^5.0.2
   intl: ^0.18.0 # or the latest version
   flutter_map: ^6.1.0
   latlong2: ^0.9.0
+  supabase_flutter: ^1.10.18
 
 dev_dependencies:
   flutter_test:
