--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -32,6 +32,12 @@
             android:value="2" />
             
             <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+<meta-data
+  android:name="com.google.android.geo.API_KEY"
+  android:value="AIzaSyCJiLgpoxvQm0TfxzHaXPQ_0Ew1ytii8n0" />
+
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     </application>
     <!-- Required to query activities that can process text, see:
