--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,16 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+<string>This app needs location access to show your position on the map.</string>
+<key>NSLocationAlwaysUsageDescription</key>
+<string>This app uses your location for real-time billboard alerts.</string>
+<key>io.flutter.embedded_views_preview</key>
+<true/>
+<key>NSLocationWhenInUseUsageDescription</key>
+<string>This app needs access to location when open to track nearby billboards.</string>
+<key>NSLocationAlwaysUsageDescription</key>
+<string>This app needs access to location when in the background for billboard alerts.</string>
+
 </dict>
 </plist>
