--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   flutter_dotenv: ^5.0.2
   intl: ^0.18.0 # or the latest version
   flutter_map: ^6.1.0
+  google_maps_flutter: ^2.5.0
+  google_maps_flutter_web: ^0.5.5+3 # match latest at time
   latlong2: ^0.9.0
   supabase_flutter: ^1.10.18
 
