--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -33,8 +33,9 @@
             
             <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 <meta-data
-  android:name="com.google.android.geo.API_KEY"
-  android:value="AIzaSyCJiLgpoxvQm0TfxzHaXPQ_0Ew1ytii8n0" />
+    android:name="com.google.android.geo.API_KEY"
+    android:value="@string/google_maps_api_key"/>
+
 
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
