--- a/ios/.gitignore
+++ b/ios/.gitignore
@@ -32,3 +32,7 @@ Runner/GeneratedPluginRegistrant.*
 !default.mode2v3
 !default.pbxuser
 !default.perspectivev3
+
+# iOS API keys
+ios/Runner/Config.xcconfig
+
